--- a/introdução ao css/introducacao.html
+++ b/introdução ao css/introducacao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Introdução ao CSS</title>
+    <link rel="stylesheet" href="estilos.css">
 
     <style>
         p {
@@ -17,6 +18,25 @@
             font-size: 18px;
             background-color: black;
         }
+
+
+        body {
+          background-color: grey;
+        }
+
+
+        p, h1{
+          width: 200px;
+          height: 200px;
+          margin: 0 auto;
+          padding: 20px;
+          color: white;
+          background-color: salmon;
+          border: 1px solid black;
+          border-radius: 5px;
+          overflow: auto;
+        }
+
     </style>
 
   </head>
