--- a/estiloux/home.html
+++ b/estiloux/home.html
@@ -24,9 +24,35 @@
 
     <main>
         <div class="layout-grid main-flex"> 
-        <section class="harmonia"></section>
-        <aside></aside>
+        <section class="harmonia">
+            <img src="./imagens/lapis.png" alt="uma imagem contendoconjuntos de lapis">
+
+            <h2>Cores com harmonia</h2> 
+
+            <p>Entenda como fazer combinações de cores que fazem sentido para sua identidade visual</p> 
+
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat atque saepe culpa, assumenda nam commodi harum nemo nesciunt dignissimos iure doloribus consectetur, eveniet, voluptatibus recusandae voluptatum omnis suscipit quisquam temporibus.</p> 
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </section>
+
+        <aside>
+
+            <article class="buscar-box">
+                <h3>Buscar</h3>
+                <input type="text">
+                <button>Ok</button>
+            </article>
+
+            <article>
+                <h3>Posts Anteriores</h3>
+            </article>
+
+            <article>
+                <h3>Inscreva-se</h3>
+            </article>
         
+        </aside>
         </div>
     </main>
 
